[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/spr_tanque_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/spr_tanque_2.png" type="Texture" id=3]
[ext_resource path="res://sprites/spr_tanque_0.png" type="Texture" id=4]
[ext_resource path="res://escenas/enemy/tanque.gd" type="Script" id=5]
[ext_resource path="res://escenas/enemy/balaTanque.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.4879, 19.1526 )

[node name="tanque" type="Area2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
bala = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="." to="." method="_on_tanque_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_tanque_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
